lab1/Test/L1-A-12-60.output
Error Type A at Line 4
Error Type B at Line 7
Error Type A at Line 10
Error Type A at Line 36
Error Type B at Line 40
