lab1/Test/L1-A-12-60.cmm
struct dXsSqP ;
struct {
}Y35rWmx ( int uTcKuYVR7S4z1Johmc4f ) {
  float rxl9qCmP_sQ0Y2Uo73 \[ 2134547139 ] , NAH = 
    hdIp3DemI ;
  if ( Rx53KgdI7pLrvejwp8Wk )   ozs5 
else   if ( gXt4LyJfBbMwehkUH0 ) {
    if ( YTzwnuEZ )     while ( lY7 )     return GwDwzYwmgj7X 
      || JmaTtV4SmDNr && mIqIP95TY9 - xgw4Qe29DhU3n_n / 
      - ( a9H7RSB = `x6cBXRnE37l3OHNgmH5 == Dgq + ! MjRiz2u 
      ( phfgXkMcrbS , HLmeKRV__ && pigRI < XmSiBJRc6yW * 
      c2VUxlvUxVkPA3 [ pSHfVJH2eKh = wZdcBjGdpRmqYvoT || 
      mfvuNU7kMoqaxU1G <= ljuWDJ6D8hSSSIpp + PWF [ fDLz2pRPJ4bKg8NGKTQw 
      >= n4RU8nNR - wZACU * BEmaEm [ Mh8CR3_mN6mVYtzJS1 
      != RM3_7QOFMSbw_dz9mc [ LvZYK5gIXicdllQa4M || u5QgM3lTx9 
      > Za * 240049778 ] ] + - d49tZw0aYlBOqP5dZrJ7 . iIoEvD_gnuYkxHlW2 
      ] * 1576832651.2131097038 . g3fRaK3C3G ] . DQU82 * 
      rk0GmHy5 ( ) ) ) ;


  }

}
int sTKPHXVv ( ) {
  if ( bvVodmtV7hT8 )   X ;
else   xzuHoII7NMpuK6_ ;

}
struct {
  struct uO71pkA4STUJ29GGh {
  }eWIrd ;
};
int jEd , nR 

;
int ;'
int ;
int ;
int ;
;
int ;
int ;
int DI ( int AKcm6TIhqIP , int wTL ) {
}
